<resources>
    <string name="app_name">Practical_4_HW</string>
    <string name="chocolate_syrup_text">Chocolate syrup</string>
    <string name="sprinkles_text">Sprinkles</string>
    <string name="crushed_nuts_text">Crushed nuts</string>
    <string name="cherries_text">Cherries</string>
    <string name="oreo_cookie_crumbles">Oreo cookie crumbles</string>
    <string name="show_toast">SHOW TOAST</string>
</resources>